# Teens-Rise

./: .gitignore  CMakeLists.txt  GameMechanics.h  Input.h  game.cpp  graphics.h
include/: AI.h  GameMechanics.h  Input.h  Physics.h  audio.h  graphics.h  script.h
src/: interface.txt  tileset.txt
src/config/: Settings.txt  UserControls.txt
src/maps/: CycleLane.txt  ForestStreet.txt  ParkAlley.txt  ParkBack.txt  ParkFront.txt  Safehouse1.txt
src/saves/: autosave.txt  savedata1.txt  savedata2.txt
src/translate/: credits.txt
src/translate/english/: disclaimer.txt  ingame.txt  locationnames.txt  menu.txt  pause.txt  phone.txt  weapons_items.txt
src/translate/english/diary/: movelist.txt
src/translate/english/ingame/: lines_alex.txt  lines_alex2.txt  lines_developer.txt  lines_doomer.txt  lines_geek.txt  lines_gopnic.txt  lines_zoomer.txt
src/translate/english/story/: intro.txt  m_1.txt  m_2.txt  m_final.txt
src/translate/russian/: disclaimer.txt  hint.txt  ingame.txt  locationnames.txt  menu.txt  pause.txt  phone.txt  weapons_items.txt
src/translate/russian/diary/: items.txt  skills.txt  stories.txt
src/translate/russian/ingame/: lines_alex.txt  lines_alex2.txt  lines_doomer.txt  lines_geek.txt  lines_gopnic.txt  lines_zoomer.txt
src/translate/russian/story/: ending.txt  intro.txt  m_1.txt  m_2.txt  m_20.txt  m_3.txt  m_5.txt  m_6.txt  m_7.txt  m_8.txt  m_final.txt
